--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,18 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Bot properties file (don't sync the token, pls)
+config.properties
+
+# IDE files
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+
+# Gradle:
+.idea/**/gradle.xml
+.idea/**/libraries
+
+#Builds
+build
